--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite env-cmd -f .env.development",
-    "build": "tsc -b && vite build env-cmd -f .env.production",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
