--- a/BE/.env
+++ b/BE/.env
@@ -2,5 +2,5 @@
 SECRET_KEY=your_secret_key_here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
+CORS_ORIGINS=http://localhost:5173
 DEBUG=True
